# wasm-example

./: Cargo.toml
src/: main.rs
static/: index.html
