[package]
name = "example"
version = "0.1.0"
authors = ["Joe Jackson <cpmhjoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19"
stdweb = "0.4"
stdweb-derive = "0.5"
kiss3d = { version = "0.22",  features = ["conrod"] }

